Refactor: replace financial/trading domain with HR/employee domain
- Trade → Employee (record: id, name, salary, department, status)
- All modules (1, 2, 3) updated: source files, test files, domain models
- Module1: StreamExamples, StreamEnhancements, Collections, Lambdas, Optional, CompletableFuture
- Module2: Records, SealedClasses, SwitchExpressions, PatternMatching, TextBlocks
- Module3: Replace Trade* POJO/record/events/services with Employee equivalents
- Threshold: isHighValue(1M) → isHighSalary(100K); statuses: EXECUTED→ACTIVE, PENDING→ONBOARDING, REJECTED→RESIGNED
- All 216 tests pass

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: anukumarrag <10570557+anukumarrag@users.noreply.github.com>